# pc-part-grader

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
packaging/: pc-part-grader.desktop
scripts/: install.ps1  install.sh  package-linux.sh  uninstall.sh
src/: App.css  App.test.tsx  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: README.txt
src-tauri/baselines/: v2.json
src-tauri/icons/: icon.icns
src-tauri/src/: community.rs  history.rs  lib.rs  main.rs  models.rs  scoring.rs
src-tauri/src/benchmarks/: content.rs  everyday.rs  graphics.rs  mod.rs  productivity.rs  runner.rs  stats.rs  storage.rs
src-tauri/src/hardware/: mod.rs
src/components/: SuiteBars.tsx
src/test/: setup.ts
