[package]
name = "pc-part-grader"
version = "0.2.0"
description = "Transparent local PC hardware benchmarks and scoring"
authors = ["PC Part Grader contributors"]
edition = "2021"
default-run = "pc-part-grader"

[lib]
name = "pc_part_grader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39.6"
tempfile = "3.27.0"
sha2 = "0.11.0"
rayon = "1.12.0"
wgpu = "30.0.0"
pollster = "1.0.1"
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
bytemuck = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
hex = "0.4"
